Update README with project details and setup instructions
Added project structure, requirements, and run instructions.